# berdl_access_request_extension

./: .gitignore  README.md  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  enforce-label.yml  release.yml
berdl_access_request/: __init__.py  handlers.py
jupyter-config/server-config/: berdl_access_request.json
src/: AccessRequestModal.tsx  CredentialModal.tsx  api.ts  index.tsx
style/: base.css  index.js
